--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js"
+
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,9 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "sucrase": "^3.12.1",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.19.0",
