--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js",
-    "dev:debug": "nodemon --inspect src/server.js"
+    "dev": "nodemon --exec sucrase-node src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js",
+    "build": "sucrase src -d ./build --transforms typescript,imports"
 
   },
   "repository": {
