--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon --exec sucrase-node src/server.js",
     "dev:debug": "nodemon --inspect src/server.js",
     "build": "sucrase src -d ./build --transforms typescript,imports"
-
   },
   "repository": {
     "type": "git",
@@ -25,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^7.18.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.4",
